[gd_scene load_steps=4 format=3 uid="uid://y5qte6tas1qu"]

[ext_resource type="Script" path="res://scripts/MainMenu.gd" id="1_514qk"]
[ext_resource type="PackedScene" uid="uid://cftiftdwtafru" path="res://scenes/options_menu.tscn" id="2_plais"]
[ext_resource type="Texture2D" uid="uid://capbnwggbjawr" path="res://sprites/background/2kPvsQM1i_E.jpg" id="3_yhgys"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 500.0
offset_bottom = 499.0
script = ExtResource("1_514qk")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 48.0
offset_top = 156.0
offset_right = 458.0
offset_bottom = 308.0

[node name="NewGame" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Начать новую игру"

[node name="Continue" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Продолжить"

[node name="Options" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Настройки"

[node name="Exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Выход"

[node name="OptionsMenu" parent="." instance=ExtResource("2_plais")]

[node name="Background" type="TextureRect" parent="."]
z_index = -5
z_as_relative = false
layout_mode = 0
offset_left = -49.0
offset_top = -8.0
offset_right = 529.0
offset_bottom = 494.0
mouse_filter = 2
texture = ExtResource("3_yhgys")
expand_mode = 1

[connection signal="pressed" from="VBoxContainer/NewGame" to="." method="_on_newGameButton_pressed"]
[connection signal="pressed" from="VBoxContainer/Continue" to="." method="_on_continueButton_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_optionsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exitButton_pressed"]
